# yell-o

./: .gitignore  Cargo.toml  README.md  install.sh  package-lock.json  package.sh  pyproject.toml
api/: __init__.py  app.py  test_app.py
bruno/: Get Voices.bru  Speak.bru  bruno.json
config/: conffiles  control  postinst.sh  prerm.sh  pulseaudio.service  yell-o.env  yell-o.service
src/: config.rs  lib.rs  main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.module.css  App.tsx  getUrl.ts  types.tsx
ui/src/components/: Spinner.module.css  Spinner.tsx  VoiceSelector.module.css  VoiceSelector.tsx  VoiceTile.module.css  VoiceTile.tsx
