[package]
name = "yell-o"
version = "0.1.0"
edition = "2024"

[dependencies]
colog = "1.3.0"
dotenv = "0.15.0"
elevenlabs_rs = "0.6.0"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = "1.47.1"
warp = { version = "0.4.1", features = ["server"] }
