[package]
name = "yell-o"
version = "0.1.1"
edition = "2024"

[dependencies]
colog = "1.3.0"
dotenv = "0.15.0"
log = "0.4.27"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.22", features = ["json"] }
rodio = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.1", features = ["server"] }
